Fix comparison between JDFJobs Initialize JDFJob name Add encryption type to property constants Interface methods does not require visibility Comment some unused variables Aesthetic changes